2009-10-23  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Fix muon veto in CDF_1994_S2952106, CDF_2005_S6217184,
	CDF_2008_S7782535, and D0_2004_S5992206

2009-10-19  Andy Buckley  <andy@insectnation.org>

	* Adding analysis info files for MC SUSY and PHOTONJETUE analyses.

	* Adding MC UE analysis in photon+jet events.

2009-10-19  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Adding new NeutralFinalState projection. Note that this final
	state takes E_T instead of p_T as argument (makes more sense for
	neutral particles). The compare() method does not yet work as
	expected (E_T comparison still missing).

	* Adding new MergedFinalState projection. This merges two final
	states, removing duplicate particles. Duplicates are identified
	by looking at the genParticle(), so users need to take care of
	any manually added particles themselves.

	* Fixing most open issues with the STAR_2009_UE_HELEN analysis.
	There is only one question left, regarding the away region.

	* Set the default split-merge value for SISCone in our FastJets
	projection to the recommended (but not Fastjet-default!) value
	of 0.75.

2009-10-17  Andy Buckley  <andy@insectnation.org>

	* Adding parsing of units in cross-sections passed to the "-x"
	flag, i.e. "-x 101 mb" is parsed internally into 1.01e11 pb.

2009-10-16  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Disabling DELPHI_2003_WUD_03_11 in the Makefiles, since I don't
	trust the data.

	* Getting STAR_2009_UE_HELEN to work.

2009-10-04  Andy Buckley  <andy@insectnation.org>

	* Adding triggers and other tidying to (still unvalidated)
	UA1_1990 analysis.

	* Fixing definition of UA5 trigger to not be intrinscally
	different for pp and ppbar: this is corrected for (although it
	takes some readng to work this out) in the 1982 paper, which I
	think is the only one to compare the two modes.

	* Moving projection setup and registration into init() method for
	remaining analyses.

	* Adding trigger implementations as projections for CDF Runs 0 &