@@ -1,3 +1,7 @@
+2009-10-23  Andy Buckley  <andy@insectnation.org>
+
+	* Fixing Cheese-3 plot in CDF 2004... at last!
+
 2009-10-23  Hendrik Hoeth <hendrik.hoeth@cern.ch>
 
 	* Fix muon veto in CDF_1994_S2952106, CDF_2005_S6217184,
